# corporate-rag-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  registry.sample.json
app/: main.py
app/api/: routes.py
app/core/: audit.py  auth.py  config.py  errors.py
app/schemas/: chat.py
app/services/: ingestion.py  openai_client.py  rag.py
app/tools/: internal_api.py  registry.py
docs/: agents-sdk-adaptation.md  deployment.md  frontend-integration.md  security.md
sample-documents/: internal-faq.md
scripts/: ingest_documents.py
tests/: test_rag_service.py  test_tools.py
